# pi-lvgl

./: .gitignore  CMakeLists.txt  README.md  lv_conf.defaults  pi-lvgl.service
src/: main.c
